<resources>
    <string name="app_name">OnlineShop</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome,</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgetten_password">Forgetten Password</string>
    <string name="already_have_account">Already have an account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_birthday">Enter Your BirthDay:</string>
    <string name="choose_your_favourite_category">Choose Your Favourite Category</string>
    <string name="category">Category</string>
    <string name="user">User</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="rate">Rate</string>
    <string name="cart">Cart</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="electronics">electronics</string>
    <string name="jewelery">jewelery</string>
    <string name="mensclothing">men\'s clothing</string>
    <string name="womensclothing">women\'s clothing</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="_1">1</string>
    <string name="remove">Remove</string>
    <string name="happy_birthday">Happy BirthDay ;-)</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="checkout">Checkout</string>
    <string name="delivery">Delivery</string>
    <string name="submit_order">Submit Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="total">Total</string>
    <string name="order_total">Order Total</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_pay">Total Pay</string>
    <string name="total_to_pay">Total to Pay</string>
    <string name="birthdate">Birthdate</string>
    <string name="change_password">Change Password</string>
    <string name="favourite_category">Favourite Category</string>
    <string name="your_information">Your Information</string>
    <string name="remove_account">Remove Account</string>
    <string name="save">Save</string>
    <string name="security">Security</string>
    <string name="are_you_sure">Are You Sure?!</string>
    <string name="add_product">Add Product</string>
    <string name="choose_what_to_do">Choose What To Do</string>
    <string name="best_sellings">Best Sellings</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="edit_products">Edit Products</string>
    <string name="edit_users">Edit Users</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="show_orders">Show Orders</string>
    <string name="count">Count</string>
    <string name="image_uri">Image URI</string>
    <string name="title">Title</string>
    <string name="edit_product">Edit Product</string>
    <string name="delete">Delete</string>
    <string name="credit_card_id">Credit Card Id</string>
    <string name="ssn">SSN</string>
    <string name="username_to_delete">Username to Delete:</string>
    <string name="sale_amount">Sale Amount:</string>
    <string name="product_to_add_sale">Product To Add Sale:</string>
    <string name="sale">Sale</string>
    <string name="cancel">Cancel</string>
    <string name="total_price">Total Price:</string>
    <string name="products2">Products:</string>
    <string name="products3">Products</string>
    <string name="price2">Price</string>
    <string name="feedbackmessage">FeedbackMessage</string>
    <string name="best_sold_products">Best Sold Products</string>
    <string name="best_sell_chart">Best Sell Chart</string>
    <string name="best_sell">Best Sell</string>
</resources>