<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FAF6F6"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CartItemCV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="#6AFFFFFF"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/orangeSecondary"
        app:strokeWidth="1.5dp"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cartMinusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/minus"
                android:textColor="@color/orangeSecondary"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cartCountTV"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/cartCountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="16dp"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cartPlusTV" />

            <TextView
                android:id="@+id/cartPlusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/plus"
                android:textColor="@color/orangeSecondary"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/cartItemIV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/btn_star_big_on"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/cartItemNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="75dp"
                android:text="@string/name"
                app:layout_constraintStart_toEndOf="@+id/cartItemIV"
                app:layout_constraintTop_toBottomOf="@+id/cartItemPriceTV"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/cartItemPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="10dp"
                android:text="@string/price"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/cartItemIV"
                app:layout_constraintTop_toTopOf="@+id/cartItemIV"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/cartRemoveTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/remove"
                android:textColor="@color/orangeSecondary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TextContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>