<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="90dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/loginBTN"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rememberCB"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/loginIconIV"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon1"
                app:tint="@null"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <EditText
                android:id="@+id/loginUserET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="#00070707"
                android:drawableStart="@drawable/user_icon"
                android:drawablePadding="10dp"
                android:drawableTint="#86070707"
                android:ems="10"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginIconIV"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/loginPassET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="#00FFFFFF"
                android:drawableStart="@drawable/pass_icon"
                android:drawablePadding="10dp"
                android:drawableTint="@color/drawableGrey"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginUserET"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/forgetTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/forgetten_password"
                app:layout_constraintBottom_toBottomOf="@+id/rememberCB"
                app:layout_constraintEnd_toEndOf="@+id/loginPassET"
                app:layout_constraintTop_toTopOf="@+id/rememberCB" />

            <CheckBox
                android:id="@+id/rememberCB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:buttonTint="@color/lightGrey"
                android:text="@string/remember_me"
                app:layout_constraintStart_toStartOf="@+id/loginPassET"
                app:layout_constraintTop_toBottomOf="@+id/loginPassET" />

            <TextView
                android:id="@+id/registerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="@+id/loginBTN"
                app:layout_constraintStart_toStartOf="@+id/loginBTN"
                app:layout_constraintTop_toBottomOf="@+id/loginBTN" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>